k8s/curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
  namespace: observability
spec:
  containers:
  - name: curlpod
    image: curlimages/curl
    command: ["sleep", "3600"]
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
