k8s/traffic-gen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-gen
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-gen
  template:
    metadata:
      labels:
        app: traffic-gen
    spec:
      containers:
        - name: traffic-gen
          image: dannyanko/infra-traffic-gen:v4
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          imagePullPolicy: Always
